##=================================================================================================
# CyborgAI
# CC BY-NC-ND 4.0 Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International
# github: https:#github.com/cyborg-ai-git
##=================================================================================================
[workspace]
resolver = "2"
members = ["rust/app_cyborai_peer" ]
#==================================================================================================
[workspace.package]
version = "2025.9.201448"
edition = "2024"
#===================================================================================================