#=======================================================================================================================
# CyborgAI
# CC BY-NC-ND 4.0 Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International
# github: https:#github.com/cyborg-ai-git
#=======================================================================================================================
[package]
name = "app_cyborgai_peer"
version.workspace = true
edition.workspace = true
#-----------------------------------------------------------------------------------------------------------------------
[[bin]]
name = "cyborgai_peer"
path = "src/main.rs"
#-----------------------------------------------------------------------------------------------------------------------
[features]
doc-uml = []
#=======================================================================================================================
[dependencies]
log = { version = "0.4.28" }
tokio = { version = "1.47.1", features = ["full"] }
openssl = { version = "0.10.72", features = ["vendored"] }
#-----------------------------------------------------------------------------------------------------------------------
[dependencies.evo_framework]
# <https://crates.io/>
version = "*"
# <https://github.com/>
git = "https://github.com/cyborg-ai-git/evo_framework.git"
#tag = "v*"
#-----------------------------------------------------------------------------------------------------------------------
[dependencies.evo_core_log]
# <https://crates.io/>
version = "*"
# <https://github.com/>
git = "https://github.com/cyborg-ai-git/evo_core_log.git"
#tag = "v*"
#-----------------------------------------------------------------------------------------------------------------------
[dependencies.evo_core_app_peer]
# <https://crates.io/>
#version = "*"
# <https://github.com/>
git = "https://github.com/cyborg-ai-git/evo_core_app_peer.git"
#tag = "v*"
#=======================================================================================================================
[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
#-----------------------------------------------------------------------------------------------------------------------
#=======================================================================================================================
#[[bench]]
#name = "bench_app_cyborgai_peer"
#harness = false
#=======================================================================================================================
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
#strip = true
debug = false
#=======================================================================================================================
[package.metadata.docs.rs]
rustdoc-args = ["--cfg=web_sys_unstable_apis"]
cargo-args = ["--no-deps"]
#=======================================================================================================================